# exerpy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  paper.bib  paper.md  pyproject.toml  sankey.ipynb  tox.ini
.github/workflows/: packaging.yml  tox_checks.yml  tox_pytest.yml
docs/: api.rst  conf.py  contribute.rst  examples.rst  exergoeconomic_analysis.rst  exergy_analysis.rst  index.rst  installation.rst  introduction.rst  references.bib  whats_new.rst  zliterature.rst
docs/api/: analyses.rst  analysis.rst  components.rst  functions.rst  parser.rst
docs/development/: how.rst  what.rst
docs/examples/: ccpp.rst  cgam.rst  heatpump.rst  json.rst
docs/whats_new/: v0-0-1.rst  v0-0-2.rst  v0-1.rst
examples/: cgam_parsed.json
examples/ccpp/: _5553lfw.def  ccpp.appdf  ccpp.bkp  ccpp.def  ccpp.ebs  ccpp.his  ccpp.py  ccpp_aspen.json  ccpp_aspen.py  ccpp_components_ebsilon.csv  ccpp_components_tespy.csv  ccpp_ebs.json  ccpp_ebs.py  ccpp_json.py  ccpp_parsed.json  ccpp_tespy.json  ccpp_tespy.py  validation.ipynb
examples/cgam/: cgam.apw  cgam.bkp  cgam.ebs  cgam.py  cgam_aspen.json  cgam_aspen.py  cgam_components_ebsilon.csv  cgam_components_tespy.csv  cgam_ebs.json  cgam_ebs.py  cgam_json.py  cgam_parsed.json  cgam_tespy.json  cgam_tespy.py  simple.ebs  simple_ebs.py  validation.ipynb
examples/heatpump/: hp.apw  hp.bkp  hp.ebs  hp_aspen.json  hp_aspen.py  hp_components_ebsilon.csv  hp_components_tespy.csv  hp_ebs.json  hp_ebs.py  hp_json.py  hp_parsed.json  hp_tespy.json  hp_tespy.py  validation.ipynb
examples/hightemp_hp/: hp_cascade.ebs  hp_cascade_ebs.json  hp_cascade_ebs.py  hp_cascade_json.py  hp_cascade_tespy.json  hp_cascade_tespy.py  sankey.ipynb
examples/hightemp_hp/plots/: cylce-diagrams.ipynb
examples/json_example/: example.json  example_json.py
examples/simple-example/: simple_example.bkp  simple_example_ebs.py  simple_example_parsed.json  simple_test.apw
src/exerpy/: __init__.py  analyses.py  analyses_new.py  components.py  functions.py  io.py
src/exerpy/components/: __init__.py  component.py
src/exerpy/components/combustion/: base.py
src/exerpy/components/heat_exchanger/: base.py  condenser.py  simple.py  steam_generator.py
src/exerpy/components/heat_exchangers/: base.py  simple.py
src/exerpy/components/helpers/: cycle_closer.py
src/exerpy/components/nodes/: deaerator.py  drum.py  flash_tank.py  mixer.py  storage.py
src/exerpy/components/piping/: valve.py
src/exerpy/components/power_machines/: generator.py  motor.py
src/exerpy/components/turbomachinery/: compressor.py  pump.py  turbine.py
src/exerpy/data/: Ahrendts.json
src/exerpy/io/: from_aspen.py
src/exerpy/io/simulation/1-simple_test/: simple_test.apw  simple_test.bkp
src/exerpy/io/simulation/2-ccpp/: ccpp.apw  ccpp.bkp
src/exerpy/io/simulation/3-cgam/: cgam.bkp
src/exerpy/parser/from_aspen/: aspen_config.py  aspen_parser.py  aspen_parser_new.py
src/exerpy/parser/from_ebsilon/: __init__.py  check_ebs_path.py  ebsilon_calc_functions.py  ebsilon_config.py  ebsilon_functions.py  ebsilon_parser.py  ebsilon_properties.py  run_ebsilon.py  utils.py
src/exerpy/parser/from_tespy/: tespy_config.py
src/exerpy/results/results_from_ebsilon/: data_from_ebsilon.json
src/exerpy/simulations/: ccpp.ebs
tests/: ccpp.ebs  ccpp.py  ccpp_parsed.json  cgam.ebs  cgam_parsed.json  ebs_test.py  example_usage_ebsilon.py  results_ebsilon.json  results_simple_test_ebsilon.json  simple_test.ebs  simple_test.py  simple_test_parsed.json  test_analyses.py  test_components.py  test_exergy_analysis.py  test_from_ebsilon.py  test_functions.py  test_tespy_examples.py
tests/test_parser/: test_aspen_parser.py  test_ebsilon_functions.py  test_ebsilon_parser.py  test_tespy_mapping.py
