[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    ".readthedocs.yaml",
    "LICENSE*",
    "tox.ini",
    "docs/",
    "tests/",
    "examples/",
]
exclude = ["docs/_build"]

[project]
name = "exerpy"
dynamic = ["version"]
description = "Exergy analysis for tabular input data"
readme = "README.rst"
authors = [
    {name = "Sergio Tomasinelli", email = "s.tomasinelli@tu-berlin.de"},
    {name = "Robert Müller", email = "robert.mueller.2@tu-berlin.de"},
    {name = "Francesco Witte", email = "github@witte.sh"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/oemof/exerpy"
Documentation = "https://exerpy.readthedocs.io/"
Changelog = "https://exerpy.readthedocs.io/en/latest/whats_new.html"
"Issue Tracker" = "https://github.com/oemof/exerpy/issues"

[project.optional-dependencies]
dev = [
    "build",
    "flit",
    "furo",
    "isort",
    "pytest",
    "sphinx>=7.2.2",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib.bibtex",
    "tespy",
    "tox",
]
tespy = [
    "tespy"
]
ebsilon = [
    "pywin32"
]
aspen = [
    "pywin32"
]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = """
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\"*.rst\"
    --tb=short
    --pyargs
    --ignore=docs/conf.py
    --ignore=docs/scripts
    --ignore=docs/_build
"""
testpaths = [
    "src/",
    "tests/",
    "docs/",
]

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "exerpy"
default_section = "THIRDPARTY"
forced_separate = "test_exerpy"
skip = "migrations"

[tool.coverage.run]
branch = true
source = ["src"]
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
omit = ["migrations"]
